--- a/ishared.html
+++ b/ishared.html
@@ -28,8 +28,8 @@
   <nav class="main-nav">
     <ul>
       <li class="active"><a href="portfolio.html">Portfolio</a></li>
-      <li><a href="#">Blog</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="blog.html">Blog</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 </header>
